k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-engine-service
  labels:
    app: search-engine
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: search-engine
